samples/_failures_safe/1761340849_f4fca1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a713f583.c: In function ‘print_shortest_path’:
./samples/SAFE/__tmp_a713f583.c:160:5: error: expected declaration or statement at end of input
  160 |     while (current) {
      |     ^~~~~
./samples/SAFE/__tmp_a713f583.c:160:5: error: expected declaration or statement at end of input
